Try adding a bunch (previous problem in toolz, but not listed in yml)
Signed-off-by: Lizzie Lundgren <elundgren@seas.harvard.edu>

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,3 +5,15 @@ xarray
 xbpch
 dask
 git+https://github.com/geoschem/gcpy
+bottleneck
+cartopy
+cython
+dask
+esmpy
+future
+matplotlib
+netcdf4
+numpy
+six
+xarray
+sphinx
